--- a/src/scss/layout/_page.scss
+++ b/src/scss/layout/_page.scss
@@ -1,7 +1,157 @@
-body {
-  padding: 2rem;
+.hero {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 25px;
   height: 100vh;
-  background-image: url('../images/bg-adalab.png');
-  background-color: $color-bg;
-  font-family: $font-main;
+  width: auto;
+  
+  background-image: url("../images/cover.jpeg");
+  background-size: cover;
+}
+
+.hero__h1 {
+  font-family:$font-familybold;
+  font-size: 4.2rem;
+  color: white;
+  text-transform:uppercase;
+  max-width: 10ch;
+  text-align: center;
+}
+
+.hero__text {
+  font-family:$font-family;
+  font-size:1.9rem;
+  color:white;
+  text-align: center;
+}
+
+.hero__scrolldown {
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  background-color: white;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+
+}
+
+/*LOOKING WINDOW*/
+
+.lookingwindow {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-top: 24px;
+  
+  
+}
+  
+.lookingwindow__littlep {
+  font-family:$font-family;
+  font-size: 1.4rem;
+  color:$colorblue;
+  text-transform: capitalize;
+  margin-top: 37px;
+  margin-bottom: 10px;
+  margin-left: 15px;
+}
+.lookingwindow__h3 {
+  font-family:$font-familybold; 
+  font-size: 2.4rem;
+  color:black;
+  text-transform:capitalize;
+  margin-bottom: 20px;
+  margin-left: 15px;
+}
+
+.lookingwindow__p {
+          font-family:$font-family; 
+          font-size: 1.8rem;
+          color: $cologrey;
+          margin-bottom: 26px;  
+          margin-left: 15px;      
+}
+
+.lookingwindow__buttongo {
+          border-radius: 25px;
+          font-size:2rem;
+          border-width: 1px;
+          border-style: solid;
+          border-color:$colororange;
+          color:$colororange;
+          background-color: white;
+          transition: background-color;
+          padding: 10px 25px 10px 25px;
+          text-decoration:none;
+          margin-left: 15px;
+
+a.lookingwindow__buttongo :hover {
+  background-color:$colordarkblue;
+}
+          
+          
+}
+
+/* THREEREASONS*/
+
+.threereasons {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(5,1fr);
+  grid-template-rows: auto auto;
+  row-gap: 20px;
+  column-gap: 15px;
+  background-color: #eff9ff;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 30px;
+    
+}
+
+.threereasons__h3 {
+      font-size: 2.4rem;
+      font-family:$font-familybold;
+      color: black;
+      margin-top: 45px;
+      text-align: center;
+  }
+.threereasons__reason {
+
+  }
+  .threereasons__reason--h4 {
+          font-size: 1.8rem;
+          font-family: $font-familybold;
+          color: black;
+          text-align: center;
+      }
+  .threereasons__reason--p {
+          font-size: 1.8rem;
+          font-family: $font-family;
+          color: black;
+          text-align: center;
+          
+      }
+   
+
+.threereasons__buttonmore {
+          display: flex;
+          justify-content: center;
+          border-radius: 25px;
+          font-family:$font-family;
+          font-size:2rem;
+          border-color: $colororange;
+          background-color: $colororange;
+          transition: border-radius ;
+          color: white;
+          padding: 10px 25px 10px 25px;
+          text-decoration: none;
+          text-align: center;  
+            
+  }
+
+.threereasons__buttonmore :hover {
+          border-radius: 50%;
 }
