--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,274 +1,17 @@
-/*@import 'core/variables';
-@import 'core/reset';
+/*
 @import 'components/code';
 @import 'components/links';
-@import 'layout/page';
-@import 'layout/header';
-@import 'layout/footer';
 @import 'pages/index';*/
 
-
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    font-size:10px;
-
-}
+@import 'core/reset';
+@import 'core/variables';
+@import 'layout/header';
+@import 'layout/page';
+@import 'layout/footer';
 
 
 
-/*
-$colororange: #f26002;
-$colorblack: black;
-$font-familybold: 'Roboto Slab', serif;
-$font-family: 'Roboto', sans-serif;
-$colorwhite:white;
-$cologrey: #4a4a4a;
-$colorblue:#8ccbea;*/
 
-
-.header {
-
-}
-
-.header__menu {
-        position: fixed;
-        margin-top: 0;
-        margin-left: 0;
-        background-color:#0271bc ;
-        padding: 10px;
-        
-} 
-
-/* HERO*/
-.hero {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 25px;
-    height: 100vh;
-    width: auto;
-    
-    background-image: url("../images/cover.jpeg");
-    background-size: cover;
-}
-
-.hero__h1 {
-    font-family:'Roboto Slab', serif ;
-    font-size: 4.2rem;
-    color: white;
-    text-transform:uppercase;
-    max-width: 10ch;
-    text-align: center;
-}
-
-.hero__text {
-    font-family:'Roboto', sans-serif;
-    font-size:1.9rem;
-    color:white;
-    text-align: center;
-}
-
-.hero__scrolldown {
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    background-color: white;
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-
-}
-
-/*LOOKING WINDOW*/
-
-.lookingwindow {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    margin-top: 24px;
-    
-    
-}
-    
-.lookingwindow__littlep {
-    font-family:'Roboto', sans-serif;
-    font-size: 1.4rem;
-    color: #8ccbea;
-    text-transform: capitalize;
-    margin-top: 37px;
-    margin-bottom: 10px;
-    margin-left: 15px;
-}
-.lookingwindow__h3 {
-    font-family:'Roboto Slab', serif; 
-    font-size: 2.4rem;
-    color:black;
-    text-transform:capitalize;
-    margin-bottom: 20px;
-    margin-left: 15px;
-}
-
-.lookingwindow__p {
-            font-family:'Roboto', sans-serif; 
-            font-size: 1.8rem;
-            color: #4a4a4a;
-            margin-bottom: 26px;  
-            margin-left: 15px;      
-}
-
-.lookingwindow__buttongo {
-            border-radius: 25px;
-            font-size:2rem;
-            border-width: 1px;
-            border-style: solid;
-            border-color: #f26002;
-            color: #f26002;
-            background-color: white;
-            transition: background-color;
-            padding: 10px 25px 10px 25px;
-            text-decoration:none;
-            margin-left: 15px;
-
-.lookingwindow__buttongo :hover {
-    background-color:#0271bc;
-}
-            
-            
-}
-
-/* THREEREASONS*/
-
-.threereasons {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: repeat(5,1fr);
-    grid-template-rows: auto auto;
-    row-gap: 20px;
-    column-gap: 15px;
-    background-color: #eff9ff;
-    justify-content: center;
-    align-items: center;
-    padding-bottom: 30px;
-      
-}
-
-.threereasons__h3 {
-        font-size: 2.4rem;
-        font-family: 'Roboto Slab', serif;
-        color: black;
-        margin-top: 45px;
-        text-align: center;
-    }
-.threereasons__reason {
-
-    }
-    .threereasons__reason--h4 {
-            font-size: 1.8rem;
-            font-family: 'Roboto Slab', serif;
-            color: black;
-            text-align: center;
-        }
-    .threereasons__reason--p {
-            font-size: 1.8rem;
-            font-family: 'Roboto', sans-serif;
-            color: black;
-            text-align: center;
-            
-        }
-     
-
-.threereasons__buttonmore {
-            display: flex;
-            justify-content: center;
-            border-radius: 25px;
-            font-family:'Roboto', sans-serif;
-            font-size:2rem;
-            border-color: #f26002;
-            background-color: #f26002;
-            transition: border-radius ;
-            color: white;
-            padding: 10px 25px 10px 25px;
-            text-decoration: none;
-            text-align: center;  
-              
-    }
-
-.threereasons__buttonmore :hover {
-            border-radius: 50%;
-}
-/*FOOTER*/
-
-.footer {
-    position:relative;
-    display: flex;
-    flex-direction: column;
-    background-color: #304268;
-    justify-content: center;
-    align-items: center;
-    gap: 15px;
-    padding-top: 30px;
-
-    
-}
-
-.scrollup {
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    background-color: white;
-    width: 45px;
-    height: 45px;
-    border-radius: 50%;
-    position:absolute;
-    top:0%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-
-}
-
-.footer__nav1--ul1 {
-    text-align: center;
-        
-}
-
-.footer__nav2--ul2 {
-    text-align: center;
-}
-
-.item {
-    list-style: none;
-}
-
-.nav-items {
-    font-size: 1.6rem;
-    color: white;
-    font-family:'Roboto', sans-serif;
-    text-decoration: none;
-    text-transform: uppercase;
-}
-
-.lovecomponents {
-    text-align: center;
-    margin-top: 15px;
-}
-
-.copy {
-    font-size: 1.4rem;
-    font-family:'Roboto', sans-serif;
-    color: white;
-}
-
-.components {
-    font-size: 1.4rem;
-    font-family:'Roboto', sans-serif;
-    color: white;
-}
-
-
-/*TABLET*/
 
 @media all and (min-width: 768px) {
 
@@ -297,10 +40,8 @@ $colorblue:#8ccbea;*/
    
     .footer {
         flex-direction: row;
-        gap: 30px;
-        padding-top: 30px;
-        align-content: space-around;    
-            
+        gap: 200px;
+        padding-top: 30px;               
     }
 
     .lovecomponents {
