--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -1,6 +1,10 @@
-// fonts
-$font-main: 'Roboto', sans-serif;
 
-// colors
-$color-bg: #f3f4f5;
-$color-secondary: #999;
+/*COLORS*/
+$colordarkblue:#0271bc;
+$colororange: #f26002;
+$cologrey: #4a4a4a;
+$colorblue:#8ccbea;
+
+/*FONTS*/
+$font-familybold: 'Roboto Slab', serif;
+$font-family: 'Roboto', sans-serif;
