--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -1,5 +1,31 @@
-.page__header {
-  display: flex;
-  justify-content: space-evenly;
-  margin-bottom: 3rem;
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-size:10px;
+
 }
+
+
+
+$colordarkblue:#0271bc;
+$colororange: #f26002;
+$font-familybold: 'Roboto Slab', serif;
+$font-family: 'Roboto', sans-serif;
+$cologrey: #4a4a4a;
+$colorblue:#8ccbea;
+
+
+.header {
+
+}
+
+.header__menu {
+      position: fixed;
+      margin-top: 0;
+      margin-left: 0;
+      background-color:$colordarkblue;
+      padding: 10px;
+      
+} 
