--- a/src/scss/layout/mediaqueries.scss
+++ b/src/scss/layout/mediaqueries.scss
@@ -74,3 +74,16 @@
 
 
 }
+
+@media all and (max-width: 320px) {
+
+    .threereasons__container--buttonmore {
+            
+        margin-top: 10px;
+    }
+
+    .scrollup {
+        display: none;
+    }
+
+}
